--- a/config.json
+++ b/config.json
@@ -2,4 +2,5 @@
 "city_states":["Seattle, WA"],
 "zip_codes":["77002"],
 "lat_tuner":"1.5",
-"lon_tuner":"1.5"}
+"lon_tuner":"1.5",
+"multiprocess":"True"}
